# glitchfk

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Cargo.toml  Makefile  README.md  bc  cmake_install.cmake  config.example.toml  discord.go  fediverse.go  glitchfuck  go.mod  go.sum  gradient.go  index.html  main  main.go  noise.go  twitter.go
CEF/: index.js  package-lock.json  package.json
assets/: manifest.json
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
modules/: fluid.go  gradient.go  math.go  modules.go  noise.go  screenshot.go
src/: array_vec_generics.rs  config.rs  gradient.cpp  gradient.hpp  image.rs  main.cpp  main.rs  random.cpp  random.hpp
src/debug/: mod.rs
src/modules/: gradient.rs  noise.rs  test.rs
src/services/: discord.rs  mod.rs  server.rs  twitter.rs  wasm.rs  web.rs
src/tinier_gradient/: README.md  display.rs  gradient.rs  gradients.rs  mod.rs  rgb.rs
