[package]
name = "glitchfuck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# glitchfuck part
rand = "0.8"
tiny-gradient = "0.1"
image = "0.24"
unroll = "0.1"
# web
hyper = { version = "0.14", features = ["full"]}
png = "0.17"
# threading
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "glitchfuck"
path = "src/main.rs"
