[package]
name = "glitchfuck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive", "cargo"] }
# glitchfuck part
rand = "0.8"
image = "0.24"
png = "0.17"

# threading
tokio = { version = "1", features = ["full"] }
futures = "0.3"

[[bin]]
name = "glitchfuck"
path = "src/main.rs"

[build]
target = "wasm"